--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "axios": "1.3.5",
+    "got": "12.6.0",
     "node-fetch": "3.3.1",
     "p-all": "4.0.0",
     "undici": "5.21.2"
